Increase table width to match button

--- a/data/program-selector.html
+++ b/data/program-selector.html
@@ -53,12 +53,12 @@
     
     <div class="clearfix colelem shared_content" id="u999-4" data-content-guid="u999-4_content">
       <p id="u999-2">SYSTEM STATUS</p>
-     <table>
+     <table style="min-width: 281px;">
        <tr><th>Parameter        </th><th>Value</th></tr>
-       <tr><td>Mode             </td><td><p id="status_mode">mode_val                   </p></td></tr>
-       <tr><td>Completed laps   </td><td><p id="status_completed_laps">laps_val</p></td></tr>
-       <tr><td>Current Position </td><td><p id="status_position">position_val</p></td></tr>
-       <tr><td>System Status    </td><td><p id="status_system_status">system_status_val </p></td></tr>
+       <tr><td>Mode             </td><td><p id="status_mode">mv</p></td></tr>
+       <tr><td>Completed laps   </td><td><p id="status_completed_laps">lv</p></td></tr>
+       <tr><td>Current Position </td><td><p id="status_position">pv</p></td></tr>
+       <tr><td>System Status    </td><td><p id="status_system_status">ssv</p></td></tr>
      </table>
     </div>
 
