Right-align the values

--- a/data/program-selector.html
+++ b/data/program-selector.html
@@ -54,11 +54,11 @@
     <div class="clearfix colelem shared_content" id="u999-4" data-content-guid="u999-4_content">
       <p id="u999-2">SYSTEM STATUS</p>
      <table style="min-width: 281px;">
-       <tr><th>Parameter        </th><th>Value</th></tr>
-       <tr><td>Mode             </td><td><p id="status_mode">mv</p></td></tr>
-       <tr><td>Completed laps   </td><td><p id="status_completed_laps">lv</p></td></tr>
-       <tr><td>Current Position </td><td><p id="status_position">pv</p></td></tr>
-       <tr><td>System Status    </td><td><p id="status_system_status">ssv</p></td></tr>
+       <tr><th>Parameter        </th><th style="text-align: right;">Value</th></tr>
+       <tr><td>Mode             </td><td><p id="status_mode" style="text-align: right;">mv</p></td></tr>
+       <tr><td>Completed laps   </td><td><p id="status_completed_laps" style="text-align: right;">lv</p></td></tr>
+       <tr><td>Current Position </td><td><p id="status_position" style="text-align: right;">pv</p></td></tr>
+       <tr><td>System Status    </td><td><p id="status_system_status" style="text-align: right;">ssv</p></td></tr>
      </table>
     </div>
 
