Fix some layout issues

--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -23,7 +23,7 @@
        <p id="u1781-2">GLOBAL LIMITS</p>
       </div>
      </div>
-     <a class="nonblock nontext clip_frame colelem shared_content" id="u2198" href="program-selector.html" data-content-guid="u2198_content"><!-- svg --><img class="svg temp_no_img_src" id="u2199" data-orig-src="images/left-arrow.svg?crc=391656077" width="38" height="38" alt="" data-mu-svgfallback="images/left%20arrow_poster_.png?crc=184332363" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext clip_frame colelem shared_content" id="u2198" href="program-selector.html" data-content-guid="u2198_content"><!-- svg --><img class="svg temp_no_img_src" id="u2199"  width="38" height="38" alt="back" src="images/left-arrow.svg"/></a>
      <div class="clearfix colelem shared_content" id="u2144" data-content-guid="u2144_content"><!-- column -->
       <div class="clearfix colelem" id="u1795-4"><!-- content -->
        <p>HOME POSITION ( 5.0 M )</p>
