--- a/data/novice.html
+++ b/data/novice.html
@@ -18,7 +18,7 @@
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="961"><!-- responsive breakpoint node -->
    <div class="clearfix" id="page"><!-- column -->
-    <a class="nonblock nontext clip_frame colelem shared_content" id="u1231" href="program-selector.html" data-content-guid="u1231_content"><!-- svg --><img class="svg" id="u1227" data-orig-src="images/left-arrow.svg?crc=391656077" width="75" height="75" alt="" data-mu-svgfallback="images/left%20arrow_poster_.png?crc=184332363" src="images/blank.gif?crc=4208392903"/></a>
+    <a class="nonblock nontext clip_frame colelem shared_content" id="u1231" href="program-selector.html" data-content-guid="u1231_content"><!-- svg --><img class="svg" id="u1227" width="75" height="75" alt="back" src="images/left-arrow.svg"/></a>
     <div class="clearfix colelem shared_content" id="u1083-4" data-content-guid="u1083-4_content"><!-- content -->
      <p id="u1083-2">NOVICE</p>
     </div>
