Convert novice mode to use CSS classes rather than ids

--- a/data/novice.html
+++ b/data/novice.html
@@ -25,82 +25,94 @@
         <p id="u1083-2">NOVICE</p>
       </div>
 
-      <div class="clearfix colelem shared_content" id="u1247-4">
+      <div class="clearfix colelem shared_content value_heading">
         <p>SPEED ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content" id="pu1077-4">
-        <div class="clearfix grpelem" id="u1077-4">
-          <p id="u1077-2">SPEED</p>
+      <div class="clearfix colelem shared_content value_row">
+        <div class="clearfix grpelem value_name">
+          <p>SPEED</p>
         </div>
-        <div class="clearfix grpelem" id="u1188-4">
-          <p id="u1188-2"><input class="clearfix grpelem" type="number" id="mode_speed"></p>
+        <div class="clearfix grpelem value_input">
+          <p>
+            <input class="clearfix grpelem" type="number" id="mode_speed">
+          </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content" id="u1247-4">
+      <div class="clearfix colelem shared_content value_heading">
         <p>END TURNING POINT ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content" id="pu1077-4">
-        <div class="clearfix grpelem" id="u1077-4">
-          <p id="u1077-2">TURN1</p>
+      <div class="clearfix colelem shared_content value_row">
+        <div class="clearfix grpelem value_name">
+          <p>TURN1</p>
         </div>
-        <div class="clearfix grpelem" id="u1188-4">
-          <p id="u1188-2"><input class="clearfix grpelem" type="number" id="mode_turn1"></p>
+        <div class="clearfix grpelem value_input">
+          <p>
+            <input class="clearfix grpelem" type="number" id="mode_turn1">
+          </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content" id="u1301-4">
+      <div class="clearfix colelem shared_content value_heading">
         <p>NEAR TURNING POINT ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content" id="pu1081-4">
-        <div class="clearfix grpelem" id="u1081-4">
-          <p id="u1081-2">TURN 2</p>
+      <div class="clearfix colelem shared_content value_row">
+        <div class="clearfix grpelem value_name">
+          <p>TURN 2</p>
         </div>
-        <div class="clearfix grpelem" id="u1218-4">
-          <p id="u1218-2"><input class="clearfix grpelem" type="number" id="mode_turn2"></p>
+        <div class="clearfix grpelem value_input">
+          <p>
+            <input class="clearfix grpelem" type="number" id="mode_turn2">
+          </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content" id="u1301-4">
+      <div class="clearfix colelem shared_content value_heading">
         <p>BRAKE TIME S ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content" id="pu1081-4">
-        <div class="clearfix grpelem" id="u1081-4">
-          <p id="u1081-2">BRAKE</p>
+      <div class="clearfix colelem shared_content value_row">
+        <div class="clearfix grpelem value_name">
+          <p>BRAKE</p>
         </div>
-        <div class="clearfix grpelem" id="u1218-4">
-          <p id="u1218-2"><input class="clearfix grpelem" type="number" id="mode_brake_time"></p>
+        <div class="clearfix grpelem value_input">
+          <p>
+            <input class="clearfix grpelem" type="number" id="mode_brake_time">
+          </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content" id="u1265-4">
+      <div class="clearfix colelem shared_content value_heading">
         <p>ACCELERATION M/S ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content" id="pu1079-4">
-        <div class="clearfix grpelem" id="u1079-4">
-          <p id="u1079-2">ACC</p>
+      <div class="clearfix colelem shared_content value_row">
+        <div class="clearfix grpelem value_name">
+          <p>ACC</p>
         </div>
-        <div class="clearfix grpelem" id="u1200-4">
-          <p id="u1200-2"><input class="clearfix grpelem" type="number" id="mode_acc"></p>
+        <div class="clearfix grpelem value_input">
+          <p>
+            <input class="clearfix grpelem" type="number" id="mode_acc">
+          </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content" id="u1289-4">
+      <div class="clearfix colelem shared_content value_heading">
         <p>DECELERATION M/S ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content" id="pu1080-4">
-        <div class="clearfix grpelem" id="u1080-4">
-          <p id="u1080-2">DEC</p>
+      <div class="clearfix colelem shared_content value_row">
+        <div class="clearfix grpelem value_name">
+          <p>DEC</p>
         </div>
-        <div class="clearfix grpelem" id="u1209-4">
-          <p id="u1209-2"><input class="clearfix grpelem" type="number" id="mode_dec"></p>
+        <div class="clearfix grpelem value_input">
+          <p>
+            <input class="clearfix grpelem" type="number" id="mode_dec">
+          </p>
         </div>
       </div>
 
       <div class="rounded-corners clearfix colelem shared_content" id="u1082-4">
         <p id="u1082-2" onclick="save_mode_values()">SET</p>
       </div>
-      <div class="verticalspacer" data-offset-top="662" data-content-above-spacer="662" data-content-below-spacer="18">
+      <div class="verticalspacer">
       </div>
     </div>
   </div>
