Remove almost all usage of per-id styles in novice.html

--- a/data/novice.html
+++ b/data/novice.html
@@ -18,100 +18,102 @@
   <p id="mode_id" style="display: none">novice</p>
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="961">
-    <div class="clearfix" id="page">
-      <a class="nonblock nontext clip_frame colelem shared_content" id="u1231" href="program-selector.html"><img
-          class="svg" id="u1227" width="75" height="75" alt="back" src="images/left-arrow.svg" /></a>
-      <div class="clearfix colelem shared_content" id="u1083-4">
-        <p id="u1083-2">NOVICE</p>
+    <div id="page">
+      <div class="colelem mode_name width_full">
+        <p>NOVICE</p>
       </div>
 
-      <div class="clearfix colelem shared_content value_heading">
+      <div class="colelem value_heading">
         <p>SPEED ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content value_row">
-        <div class="clearfix grpelem value_name">
+      <div class="colelem value_row">
+        <div class="grpelem value_name width_half">
           <p>SPEED</p>
         </div>
-        <div class="clearfix grpelem value_input">
+        <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="clearfix grpelem" type="number" id="mode_speed">
+            <input class="grpelem width_half" type="number" id="mode_speed">
           </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content value_heading">
+      <div class="colelem value_heading">
         <p>END TURNING POINT ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content value_row">
-        <div class="clearfix grpelem value_name">
+      <div class="colelem value_row">
+        <div class="grpelem value_name width_half">
           <p>TURN1</p>
         </div>
-        <div class="clearfix grpelem value_input">
+        <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="clearfix grpelem" type="number" id="mode_turn1">
+            <input class="grpelem width_half" type="number" id="mode_turn1">
           </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content value_heading">
+      <div class="colelem value_heading">
         <p>NEAR TURNING POINT ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content value_row">
-        <div class="clearfix grpelem value_name">
+      <div class="colelem value_row">
+        <div class="grpelem value_name width_half">
           <p>TURN 2</p>
         </div>
-        <div class="clearfix grpelem value_input">
+        <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="clearfix grpelem" type="number" id="mode_turn2">
+            <input class="grpelem width_half" type="number" id="mode_turn2">
           </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content value_heading">
+      <div class="colelem value_heading">
         <p>BRAKE TIME S ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content value_row">
-        <div class="clearfix grpelem value_name">
+      <div class="colelem value_row">
+        <div class="grpelem value_name width_half">
           <p>BRAKE</p>
         </div>
-        <div class="clearfix grpelem value_input">
+        <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="clearfix grpelem" type="number" id="mode_brake_time">
+            <input class="grpelem width_half" type="number" id="mode_brake_time">
           </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content value_heading">
+      <div class="colelem value_heading">
         <p>ACCELERATION M/S ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content value_row">
-        <div class="clearfix grpelem value_name">
+      <div class="colelem value_row">
+        <div class="grpelem value_name width_half">
           <p>ACC</p>
         </div>
-        <div class="clearfix grpelem value_input">
+        <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="clearfix grpelem" type="number" id="mode_acc">
+            <input class="grpelem width_half" type="number" id="mode_acc">
           </p>
         </div>
       </div>
 
-      <div class="clearfix colelem shared_content value_heading">
+      <div class="colelem value_heading">
         <p>DECELERATION M/S ( CURRENT SETTINGS )</p>
       </div>
-      <div class="clearfix colelem shared_content value_row">
-        <div class="clearfix grpelem value_name">
+      <div class="colelem value_row">
+        <div class="grpelem value_name width_half">
           <p>DEC</p>
         </div>
-        <div class="clearfix grpelem value_input">
+        <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="clearfix grpelem" type="number" id="mode_dec">
+            <input class="grpelem width_half" type="number" id="mode_dec">
           </p>
         </div>
       </div>
 
-      <div class="rounded-corners clearfix colelem shared_content" id="u1082-4">
-        <p id="u1082-2" onclick="save_mode_values()">SET</p>
+      <div class="colelem" style="padding-top: 14px;">
+        <a href="javascript:save_mode_values()" class="save_button width_full" >SET</a>
       </div>
+
+      <a class="nonblock nontext clip_frame colelem" id="u1231" href="program-selector.html"><img
+        class="svg" id="u1227" width="75" height="75" alt="back" src="images/left-arrow.svg" /></a>
+
       <div class="verticalspacer">
       </div>
     </div>
