--- a/data/service.html
+++ b/data/service.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <main class='wrapper'>
-            <div class='container' style='max-width: 75%'>
+            <div class='container' style='max-width: 99%'>
                 <div class='row'>
                     <fieldset class='column column-75 rounded'>
                         <legend>Debug log</legend>
-                        <textarea style='overflow: scroll; height:80%' id='debugLog'></textarea>
+                        <textarea style='overflow: scroll; min-width: 99%; min-height: 500px' id='debugLog'></textarea>
                     </fieldset>
                     <fieldset class='column column-25 rounded'>
                         <legend>Firmware Update</legend>
@@ -24,9 +24,11 @@
                             </fieldset>
                         </form>
                         <form method='POST' action='#' enctype='multipart/form-data' id='updateSpiffs'>
-                            <label for='updateFile'>SPIFFS</label>
-                            <input type='file' name='update' id='updateFile'>
-                            <input type='submit' value='Update Spiffs'>
+                            <fieldset>
+                                <label for='updateFile'>SPIFFS</label>
+                                <input type='file' name='update' id='updateFile'>
+                                <input type='submit' value='Update Spiffs'>
+                            </fieldset>
                         </form>
                         <label for='updateProgress'>Update progress:</label>
                         <progress style='padding-bottom: 2rem' id='updateProgress' max='100' value='0'>0%</progress>
