--- a/data/system.html
+++ b/data/system.html
@@ -5,16 +5,25 @@
         <script src='scripts/jquery-3.6.0.min.js'></script>
         <script src='scripts/update.js'></script>
         <script src='scripts/logsocket.js'></script>
+        <script src='scripts/system.js'></script>
     </head>
     <body>
-        <main class='wrapper'>
-            <div class='container' style='max-width: 99%'>
-                <div class='row'>
-                    <fieldset class='column column-75 rounded'>
+        <main>
+            <divstyle='max-width: 99%'>
+                <div>
+                    <fieldset>
                         <legend>Debug log</legend>
                         <textarea style='overflow: scroll; min-width: 99%; min-height: 500px' id='debugLog'></textarea>
                     </fieldset>
-                    <fieldset class='column column-25 rounded'>
+                    <fieldset>
+                        <legend>Wifi Configuration</legend>
+                            <label for='wifiSsid'>SSID</label>
+                            <input type="text" name="" id="wifiSsid">
+                            <label for='wifiPassword'>Password</label>
+                            <input type="text" name="" id="wifiPassword">
+                            <input type='submit' onclick="set_config()" value='Set Wifi Configuration'>
+                    </fieldset>
+                    <fieldset>
                         <legend>Firmware Update</legend>
                         <form method='POST' action='#' enctype='multipart/form-data' id='updateFirmware'>
                             <fieldset>
