--- a/data/novice.html
+++ b/data/novice.html
@@ -32,7 +32,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="mode_speed" onChange="validate_speed">
+            <input class="grpelem width_half" type="number" step="0.1" id="mode_speed" onChange="validate_speed()">
           </p>
         </div>
       </div>
@@ -48,7 +48,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="mode_turn1" onChange="validate_turn1">
+            <input class="grpelem width_half" type="number" step="0.1" id="mode_turn1" onChange="validate_turn1()">
           </p>
         </div>
       </div>
@@ -64,7 +64,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="mode_turn2" onChange="validate_turn2">
+            <input class="grpelem width_half" type="number" step="0.1"  id="mode_turn2" onChange="validate_turn2()">
           </p>
         </div>
       </div>
@@ -80,7 +80,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="mode_brake_time" onChange="validate_brake_time">
+            <input class="grpelem width_half" type="number" step="0.1" id="mode_brake_time" onChange="validate_brake_time()">
           </p>
         </div>
       </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="mode_acc" onChange="validate_acceleration">
+            <input class="grpelem width_half" type="number" step="0.1" id="mode_acc" onChange="validate_acceleration()">
           </p>
         </div>
       </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="mode_dec" onChange="validate_deceleration">
+            <input class="grpelem width_half" type="number" step="0.1 "id="mode_dec" onChange="validate_deceleration()">
           </p>
         </div>
       </div>
