Display global values with decimal dot as well

--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -137,7 +137,7 @@
       </div>
       <div class="clearfix colelem" id="u2132"><!-- group -->
        <div class="clearfix grpelem" id="u2075-4"><!-- content -->
-        <p id="u2075-2">FMIN</p>
+        <p id="u2075-2">MAX SPEED</p>
        </div>
        <div class="clearfix grpelem" id="u2084-4"><!-- content -->
         <p id="u2084-2">
@@ -152,7 +152,7 @@
       </div>
       <div class="clearfix colelem" id="u2138"><!-- group -->
        <div class="clearfix grpelem" id="u2102-4"><!-- content -->
-        <p id="u2102-2">FMIN</p>
+        <p id="u2102-2">HOMING SPEED</p>
        </div>
        <div class="clearfix grpelem" id="u2111-4"><!-- content -->
         <p id="u2111-2">
@@ -171,7 +171,7 @@
        <div class="clearfix" id="u2666_align_to_page">
         <div class="clearfix colelem shared_content" id="u2348" data-content-guid="u2348_content"><!-- column -->
          <div class="clearfix colelem" id="u2349-5"><!-- content -->
-          <p>MAX ACCELERATION <span id="u2349-2">( 10 min. )</span></p>
+          <p>MAX TIME <span id="u2349-2">( 10 min. )</span></p>
          </div>
          <div class="clearfix colelem" id="u2350"><!-- group -->
           <div class="clearfix grpelem" id="u2352-4"><!-- content -->
@@ -185,7 +185,7 @@
         </div>
          <div class="clearfix colelem shared_content" id="u2444" data-content-guid="u2444_content"><!-- column -->
          <div class="clearfix colelem" id="u2448-5"><!-- content -->
-          <p>MAX DECELERATION <span id="u2448-2">(CURRENT SETTINGS )</span></p>
+          <p>MAX LAPS <span id="u2448-2">(CURRENT SETTINGS )</span></p>
          </div>
          <div class="clearfix colelem" id="u2445"><!-- group -->
           <div class="clearfix grpelem" id="u2446-4"><!-- content -->
